# pyPOAcars

./: .gitignore  LICENSE  README.md  pyproject.toml  ruff_tasks.bat
am_modulation/: demod.py  local_oscillator.py  modulate.py
decimation/: __init__.py
docs/: ACARS_SPECIFICATIONS.md
filters/: fir_filter.py
libacars_wrapper/: cacars.pxd  cadsc.pxd  carinc.pxd  ccpdlc.pxd  clibacars.pxd  clist.pxd  creassembly.pxd  cvstring.pxd  libacars.pyx  setup.py
normalization/: __init__.py
plotting/: __init__.py  spectrum_characteristics.py
resampling/: __init__.py
src/: acars.py  demod.py
src/filters/: fir_filter.py
test/: local_test.py
tests/: local_test.py
